<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Unsplash</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish">Finish</string>
    <string name="login_btn_text">Login</string>
    <string name="you_must_login_now_text">You must login now</string>
    <string name="welcome_to_unsplash_text">Welcome to Unsplash</string>
    <string name="arrow_back">arrow back</string>

    <string name="auth_canceled">Authentication failed</string>
    <string name="corrupt_access_token">Corrupt access token</string>
    <string name="get_user_info">Get user info</string>
    <string name="get_user_error">Get user error</string>
    <string name="unsplash_photo">unsplash photo</string>
    <string name="today_in_the_top">Today in the top</string>
    <string name="title">Header</string>
    <string name="author_image_description">author image</string>
    <string name="like_unlike">like|unlike button</string>
    <string name="feed">Feed</string>
    <string name="collections">Collections</string>
    <string name="profile">Profile</string>
    <string name="details">Details</string>
    <string name="search">What are we looking for?</string>
    <string name="logout">Logout</string>
    <string name="searching">Loading photos: %1$s</string>
    <string name="no_internet">No internet connection</string>

    <string name="nickname">\@%1$s</string>
    <string name="username">%1$s %2$s</string>

    <string name="unknown">Unknown</string>
    <string name="download_start">Start downloading</string>
    <string name="download_success">Image saved in: %1$s</string>
    <string name="download_failed">Image downloading failure</string>
    <string name="location">%1$s</string>
    <string name="madeWith">Made with: %1$s</string>
    <string name="model">Model: %1$s</string>
    <string name="exposure">Exposure: %1$s</string>
    <string name="aperture">Aperture: %1$s</string>
    <string name="focalLength">Focal Length: %1$s</string>
    <string name="iso">ISO: %1$s</string>
    <string name="aboutAuthor">About @%1$s: %2$s</string>
    <string name="no_about">He didn`t tell about himself</string>
    <string name="description">Description: %1$s</string>
    <string name="no_description">Is empty :(</string>

    <string-array name="onBoardText">
        <item>Create pictures, publish, gather an audience, get feedback!</item>
        <item>Share with friends, collect collections</item>
        <item>Upload your favorite pictures and track statistics</item>
    </string-array>

    <string name="download">Download</string>
    <string name="open_with_text">Open with…</string>

    <string name="image_transaction_name">image_transaction_name</string>

    <string name="map_app_error">Not found app with maps</string>
    <string name="error">Something went wrong</string>
    <string name="thx_message_permissions">Tnks! Try download now</string>
    <string name="sry_message_permissions">Sry, we not have permissions</string>
    <string name="photos_count">%1$s photos</string>

</resources>