<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/splashFragment">


    <fragment
        android:id="@+id/splashFragment"
        android:name="com.semenchuk.unsplash.ui.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_onBoardingFragment"
            app:destination="@id/onBoardingFragment"
            app:popUpTo="@id/mobile_navigation" />
        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.semenchuk.unsplash.ui.home.HomeFragment"
        android:label="@string/feed"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_favoriteFragment"
            app:destination="@id/collectionsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_homeFragment_to_detailedPhotosFragment"
            app:destination="@id/detailedPhotosFragment">
            <argument
                android:name="photoItem"
                app:argType="com.semenchuk.unsplash.data.room.photos.SavedPhotoEntity" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/collectionsFragment"
        android:name="com.semenchuk.unsplash.ui.collections.CollectionsFragment"
        android:label="@string/collections"
        tools:layout="@layout/fragment_collections" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.semenchuk.unsplash.ui.profile.ProfileFragment"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_splashFragment"
            app:destination="@id/splashFragment"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/onBoardingFragment"
        android:name="com.semenchuk.unsplash.ui.onBoarding.OnBoardingFragment"
        android:label="fragment_on_boarding"
        tools:layout="@layout/fragment_on_boarding" >
        <action
            android:id="@+id/action_onBoardingFragment_to_authorizationFragment"
            app:destination="@id/authorizationFragment"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/authorizationFragment"
        android:name="com.semenchuk.unsplash.ui.auth.AuthorizationFragment"
        android:label="fragment_authorization"
        tools:layout="@layout/fragment_authorization" >
        <action
            android:id="@+id/action_authorizationFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/detailedPhotosFragment"
        android:name="com.semenchuk.unsplash.ui.detailedPhoto.DetailedPhotosFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_detalied_photos" >
        <argument
            android:name="photoItem"
            app:argType="com.semenchuk.unsplash.data.room.photos.SavedPhotoEntity" />
    </fragment>

</navigation>